Fix deprecation in URL api